force-app/main/default/objects/Bid__c/Bid__c.object-meta.xml
<CustomObject>
    <description>The Bids and Tenders Team object for tracking their workload.</description>
    <label>Bid</label>
    <nameField>
        <displayFormat>BT{0000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>