force-app/main/default/objects/Bid__c/fields/Bid_Source__c.field-meta.xml
<CustomField>
    <fullName>Bid_Source__c</fullName>
    <description>Indicates the source of the bid (ie either from internal or external sources)</description>
    <inlineHelpText>indicate the source of the bid (ie either from internal or external sources)</inlineHelpText>
    <label>Bid Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal – Seller</fullName>
            </value>
            <value>
                <fullName>Internal – Product</fullName>
            </value>
            <value>
                <fullName>Internal – Other</fullName>
            </value>
            <value>
                <fullName>External – Tender site</fullName>
            </value>
            <value>
                <fullName>External – Newspaper</fullName>
            </value>
            <value>
                <fullName>External – Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>