force-app/main/default/objects/Bid__c/fields/Bid_Support__c.field-meta.xml
<CustomField>
    <fullName>Bid_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that will allow any supporting resource assigned to manage the activity to be recorded</description>
    <inlineHelpText>Field that will allow any supporting resource assigned to manage the activity to be recorded</inlineHelpText>
    <label>Bid Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids</relationshipName>
    <type>Lookup</type>
</CustomField>