force-app/main/default/objects/Bid__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Field that indicates if the Opportunity the bid / proposal relates to is new business (ie not previously managed by AP) or is a response developed to retain existing work</description>
    <inlineHelpText>Field that indicates if the Opportunity the bid / proposal relates to is new business (ie not previously managed by AP), or is a response developed to retain existing work</inlineHelpText>
    <label>New Business or Retention?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>