force-app/main/default/objects/Bid__c/fields/Post_Bid_Review__c.field-meta.xml
<CustomField>
    <fullName>Post_Bid_Review__c</fullName>
    <label>Post Bid Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>