force-app/main/default/objects/Bid__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>Provides the percentage probability of the opportunity</description>
    <inlineHelpText>Value that is obtained from the opportunity linked to the Bid</inlineHelpText>
    <label>Probability (%)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>