force-app/main/default/objects/Bid__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to allow the name of the Sales Director (ie 1 up manager of Coverage seller) to be captured</description>
    <inlineHelpText>Field to allow the name of the Sales Director (ie 1 up manager of Coverage seller) to be captured</inlineHelpText>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids1</relationshipName>
    <type>Lookup</type>
</CustomField>