force-app/main/default/objects/Bid__c/fields/Support_required_from_Solutions_Team__c.field-meta.xml
<CustomField>
    <fullName>Support_required_from_Solutions_Team__c</fullName>
    <description>Field is populated from the Bids Request Flow</description>
    <label>Support required from Solutions Team?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>