force-app/main/default/objects/Bid__c/recordTypes/Bids.recordType-meta.xml
<RecordType>
    <fullName>Bids</fullName>
    <active>true</active>
    <description>Record type to add bids for EC&amp;G.</description>
    <label>Bids Request EC&amp;G</label>
</RecordType>