force-app/main/default/objects/Bid__c/recordTypes/Bids_EC_G.recordType-meta.xml
<RecordType>
    <fullName>Bids_EC_G</fullName>
    <active>true</active>
    <description>.</description>
    <label>Bids EC&amp;G</label>
</RecordType>