force-app/main/default/objects/Bid__c/recordTypes/Business_Development_PeS.recordType-meta.xml
<RecordType>
    <fullName>Business_Development_PeS</fullName>
    <active>true</active>
    <description>Business Development for Parcel &amp; eCommerce Services</description>
    <label>Business Development – PeS</label>
</RecordType>