force-app/main/default/objects/Bid__c/recordTypes/Business_Sales_PeS.recordType-meta.xml
<RecordType>
    <fullName>Business_Sales_PeS</fullName>
    <active>true</active>
    <description>Business Sales for Parcel &amp; eCommerce Services</description>
    <label>Business Sales – PeS</label>
</RecordType>