force-app/main/default/objects/Bid__c/recordTypes/Inside_Sales_PeS.recordType-meta.xml
<RecordType>
    <fullName>Inside_Sales_PeS</fullName>
    <active>true</active>
    <description>Inside Sales for Parcel &amp; eCommerce Services</description>
    <label>Inside Sales – PeS</label>
</RecordType>