force-app/main/default/objects/Bid__c/recordTypes/Key_Accounts_PeS.recordType-meta.xml
<RecordType>
    <fullName>Key_Accounts_PeS</fullName>
    <active>true</active>
    <description>Key Accounts for Parcel &amp; eCommerce Services</description>
    <label>Key Accounts – PeS</label>
</RecordType>