force-app/main/default/objects/Bid__c/validationRules/Submitted_Date_for_Submitted_Bids.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Date_for_Submitted_Bids</fullName>
    <active>true</active>
    <description>Require a Submitted Date for all Bids that have been Submitted</description>
    <errorConditionFormula>IF(AND(OR( 
ISPICKVAL(Status__c, &quot;Submitted&quot;), 
ISPICKVAL( Status__c , &quot;Won&quot;) , 
ISPICKVAL(Status__c, &quot;Lost&quot;)) 
,ISBLANK(TEXT(  Closed_Date__c  ))), True, False)</errorConditionFormula>
    <errorDisplayField>Closed_Date__c</errorDisplayField>
    <errorMessage>A Submitted Date is required on all Bids that have been submitted</errorMessage>
</ValidationRule>