force-app/main/default/objects/Bid__c/listViews/Bid_Management.listView-meta.xml
<ListView>
    <fullName>Bid_Management</fullName>
    <columns>NAME</columns>
    <columns>Bid_or_Tender_Type__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Coverage_Sales_Driver__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bid Management</label>
    <language>en_US</language>
</ListView>