force-app/main/default/objects/Bid__c/listViews/New_Bids_Bid.listView-meta.xml
<ListView>
    <fullName>New_Bids_Bid</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Bid_or_Tender_Type__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Allocate to Bid Manager,Qualification Required</value>
    </filters>
    <label>New Bids</label>
    <queue>New_Bids</queue>
    <sharedTo>
        <role>Bids_Tenders_Manager</role>
    </sharedTo>
</ListView>