force-app/main/default/objects/Bid__c/listViews/Quality_Active_Bids.listView-meta.xml
<ListView>
    <fullName>Quality_Active_Bids</fullName>
    <columns>NAME</columns>
    <columns>Bid_Quality_Rating__c</columns>
    <columns>Bid_Information_Missing__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Bid_Tender_Owner_del__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Evaluating,In Progress,Submitted</value>
    </filters>
    <label>Quality of Active Bids</label>
</ListView>